--- a/bower.json
+++ b/bower.json
@@ -23,6 +23,7 @@
     "font-awesome": "^4.6.3",
     "lodash": "^4.13.1",
     "angular-toastr": "^1.7.0",
-    "angular-ui-router": "ui-router#^0.3.1"
+    "angular-ui-router": "ui-router#^0.3.1",
+    "paho-mqtt": "*"
   }
 }
