--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,7 @@
     "lodash": "^4.13.1",
     "angular-toastr": "^1.7.0",
     "angular-ui-router": "ui-router#^0.3.1",
-    "paho-mqtt": "*"
+    "paho-mqtt": "*",
+    "angular-resource-sails": "^1.2.2"
   }
 }
